# Project-Chroma

./: .gitignore  components.json  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: app.css  main.tsx  root.tsx  routes.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: config.rs  library.rs  mod.rs  utils.rs
src/components/: Navbar.tsx  animated.tsx
src/components/custom/: DialogPaged.tsx  IconBox.tsx  NotificationCenter.tsx  Spinner.tsx
src/components/icons/: Album24Filled.tsx  Album24Regular.tsx  Heart24Filled.tsx  Heart24Regular.tsx  Image24Filled.tsx  Image24Regular.tsx  Screenshot24Regular.tsx  ScreenshotRecord24Regular.tsx  Video24Regular.tsx  Video36024Regular.tsx
src/components/layout/: centerLayout.tsx  framebar.tsx  sidebar.tsx
src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  field.tsx  framebar.tsx  popover.tsx  tooltip.tsx
src/layouts/: sidebar.tsx
src/lib/: invoker.ts  models.ts  notifications.ts  useLibrary.ts  useNotifications.ts  utils.ts  utils.tsx
src/routes/: __root.tsx  albums.tsx  home.tsx  onboarding.tsx
src/routes/_app/: albums.tsx  favorites.tsx  index.tsx  route.tsx
src/routes/onboarding/: customize.tsx  index.tsx
