[package]
name = "project-chroma"
version = "0.1.0"
description = "A Tauri App"
authors = ["D3W10"]
edition = "2021"

[lib]
name = "project_chroma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
rusqlite = "0.37.0"
