[package]
name = "project-chroma"
version = "0.1.0"
description = "A Tauri App"
authors = ["D3W10"]
edition = "2021"

[lib]
name = "project_chroma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
libheif-rs = "2.4.0"
kamadak-exif = "0.6.1"
